@@ -1,5 +1,8 @@
 2020-09-21  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/http/ProtocolRequestBuilder.java:
+	Support @Consumes to set "Accept:" header.
+
 	* pom.xml: Started development of 3.1-SNAPSHOT.
 
 2020-09-03  Allen D. Ball  <ball@hcf.dev>
